[package]
name = "skill-eeg"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "EEG signal processing for NeuroSkill — extracted workspace crate"

[features]
default = []
gpu = ["dep:gpu-fft", "gpu-fft/wgpu"]
mlx = ["gpu", "gpu-fft/mlx"]

[dependencies]
skill-constants = { path = "../skill-constants" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
gpu-fft    = { version = "1.2.0", default-features = false, optional = true }
rustfft    = "6"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "dsp_bench"
harness = false

[lints]
workspace = true
