[package]
name = "skill-eeg"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "EEG signal processing for NeuroSkill — extracted workspace crate"

[features]
default = []
# GPU-accelerated FFT via RLX — Metal on macOS, CUDA/wgpu/CPU elsewhere.
# rlx-fft enables the rlx CPU baseline; the tier suffixes add GPU backends.
rlx-fft       = ["dep:rlx", "rlx/cpu"]
rlx-fft-metal = ["rlx-fft", "rlx/metal"]
rlx-fft-cuda  = ["rlx-fft", "rlx/cuda"]
rlx-fft-gpu   = ["rlx-fft", "rlx/gpu"]
rlx-fft-rocm  = ["rlx-fft", "rlx/rocm"]

[dependencies]
skill-constants = { path = "../skill-constants" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rlx        = { workspace = true, optional = true }
rustfft    = "6"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "dsp_bench"
harness = false

[lints]
workspace = true
