[package]
name = "skill-exg"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "EEG embedding helpers — cosine distance, fuzzy text matching, timestamp formatting, HuggingFace weight resolution/download, cubecl cache setup, epoch metrics — extracted workspace crate"

[features]
default = []
cubecl = ["dep:cubecl-runtime"]
neurorvq-ndarray = ["dep:neurorvq-rs", "dep:burn", "dep:burn-ndarray", "dep:log", "neurorvq-rs/ndarray"]
neurorvq-metal = ["dep:neurorvq-rs", "dep:burn", "dep:burn-wgpu", "dep:log", "neurorvq-rs/metal", "burn-wgpu/metal"]
neurorvq-vulkan = ["dep:neurorvq-rs", "dep:burn", "dep:burn-wgpu", "dep:log", "neurorvq-rs/vulkan", "burn-wgpu/vulkan"]

[dependencies]
anyhow = { workspace = true }
skill-constants = { path = "../skill-constants" }
skill-eeg       = { path = "../skill-eeg" }
skill-data      = { path = "../skill-data" }
skill-devices   = { path = "../skill-devices" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
hf-hub          = "0.5"
ureq            = { version = "3.3", features = ["native-tls", "json"] }
cubecl-runtime  = { version = "0.9.0", optional = true }
neurorvq-rs     = { package = "neurorvq", version = "0.1.0", optional = true }
burn            = { version = "0.20.1", default-features = false, features = ["std"], optional = true }
burn-ndarray    = { version = "0.20.1", default-features = false, features = ["std"], optional = true }
burn-wgpu       = { version = "0.20.1", default-features = true, optional = true }
log             = { version = "0.4", optional = true }

[lints]
workspace = true
