[package]
name = "skill-exg"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "EEG embedding helpers — cosine distance, fuzzy text matching, timestamp formatting, HuggingFace weight resolution/download, epoch metrics — extracted workspace crate"

[features]
default = []
neurorvq-ndarray = ["dep:neurorvq-rs", "dep:rlx", "dep:log"]
neurorvq-metal   = ["neurorvq-ndarray", "neurorvq-rs/rlx-metal"]
neurorvq-mlx     = ["neurorvq-ndarray", "neurorvq-rs/rlx-mlx"]
neurorvq-gpu     = ["neurorvq-ndarray", "neurorvq-rs/rlx-gpu"]
neurorvq-cuda    = ["neurorvq-ndarray", "neurorvq-rs/rlx-cuda"]
neurorvq-rocm    = ["neurorvq-ndarray", "neurorvq-rs/rlx-rocm"]
eegdino-rlx      = ["dep:eegdino", "dep:rlx", "dep:log"]
eegdino-metal    = ["eegdino-rlx", "eegdino/metal"]
eegdino-mlx      = ["eegdino-rlx", "eegdino/mlx"]
eegdino-gpu      = ["eegdino-rlx", "eegdino/gpu"]
eegdino-cuda     = ["eegdino-rlx", "eegdino/cuda"]
eegdino-rocm     = ["eegdino-rlx", "eegdino/rocm"]

[dependencies]
anyhow = { workspace = true }
skill-constants = { path = "../skill-constants" }
skill-eeg       = { path = "../skill-eeg" }
skill-data      = { path = "../skill-data" }
skill-devices   = { path = "../skill-devices" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
hf-hub          = "0.5"
ureq            = { version = "3.3", features = ["native-tls", "json"] }
neurorvq-rs     = { version = "0.2.0", default-features = false, features = ["rlx-cpu"], optional = true }
eegdino         = { version = "0.2.0", default-features = false, features = ["rlx-cpu"], optional = true }
rlx             = { version = "0.2.5", default-features = false, optional = true }
log             = { version = "0.4", optional = true }

[lints]
workspace = true
