[package]
name = "skill-health"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Apple HealthKit data store — sync, query, and summary over SQLite"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite   = { version = "0.37", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
