[package]
name = "skill-iroh"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "iroh tunnel + TOTP access control for Skill"

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
iroh = "1.0.0-rc.0"
# pkcs8 0.11.0 stable is now compatible with iroh 1.0.0-rc.0's ed25519-dalek
rand = "0.9"
tokio = { version = "1", features = ["full"] }
totp-rs = { version = "5.7", features = ["gen_secret", "otpauth", "qr"] }
ureq = { version = "3", features = ["native-tls", "json"] }
base64 = "0.22"
qrcodegen = "1.8"
# Default features pull `avif` → `ravif` → `rav1e` (AV1 encoder, ~5 MB).
# We only need PNG to render QR codes for TOTP pairing — opt out of the
# full codec set. Other workspace consumers already do this; we were the
# lone outlier forcing AVIF into every binary via Cargo feature unification.
image = { version = "0.25", default-features = false, features = ["png"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
