[package]
name = "skill-jobs"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Sequential job queue for expensive compute tasks — extracted workspace crate"

[dependencies]
skill-constants = { path = "../skill-constants" }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
