[package]
name = "skill-llm"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "LLM inference engine for NeuroSkill — extracted workspace crate"

[features]
default    = []
llm        = ["dep:llama-cpp-4", "axum/multipart", "llm-mtmd"]
llm-metal  = ["llm", "llama-cpp-4?/metal"]
llm-cuda   = ["llm", "llama-cpp-4?/cuda"]
llm-vulkan = ["llm", "llama-cpp-4?/vulkan"]
llm-mtmd   = ["llm", "llama-cpp-4?/mtmd"]

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite   = { version = "0.37", features = ["bundled"] }
axum       = { version = "0.8", features = ["ws"] }
tokio      = { version = "1", features = ["full"] }
async-stream = "0.3"
jsonschema = "0.28"
log        = "0.4"
regex      = "1"
base64     = "0.22"
rfd        = { version = "0.17", default-features = false, features = ["file-handle-inner", "xdg-portal"] }
ureq       = { version = "2", features = ["native-tls", "json"] }
hf-hub     = "0.5"
dirs       = "6"

llama-cpp-4 = { version = "0.2.12", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-4 = { version = "0.2.12", optional = true, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-4 = { version = "0.2.10", optional = true, features = ["vulkan"] }
