[package]
name = "skill-llm"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "LLM inference engine for NeuroSkill — extracted workspace crate"

[features]
default    = []

# ── Backend feature flags ─────────────────────────────────────────────────────
# `llm` is a marker auto-enabled by any backend — it gates the shared
# engine scaffolding (state, protocol, handlers, tool orchestration).
#
# Per-platform RLX backend variants (mirror rlx's own naming):
#   macOS:        llm-rlx-metal | llm-rlx-mlx                 (also brings BLAS Accelerate)
#   Linux:        llm-rlx-cuda  | llm-rlx-rocm | llm-rlx-wgpu | llm-rlx-cpu
#   Windows:      llm-rlx-cuda  | llm-rlx-wgpu | llm-rlx-cpu
# `llm-rlx-cpu` is the portable fallback (no GPU dependency; relies on
# rlx-cpu's scalar gemm or system BLAS if linked separately).
llm                = []
# Base rlx feature pulls cpu dispatch so the runtime always has at least
# one usable target. GPU-flavor features add their backend on top.
llm-rlx       = ["llm", "dep:rlx", "dep:rlx-models", "dep:rlx-minicpm5", "dep:rlx-minimax", "dep:rlx-nemotron", "dep:rlx-gemma", "dep:image", "rlx?/cpu"]
llm-rlx-cpu   = ["llm-rlx"]
llm-rlx-metal = ["llm-rlx", "rlx?/metal", "rlx?/blas-accelerate", "rlx-models?/metal", "rlx-minicpm5?/metal", "rlx-minimax?/metal", "rlx-nemotron?/metal", "rlx-gemma?/metal"]
llm-rlx-mlx   = ["llm-rlx", "rlx?/mlx", "rlx?/blas-accelerate", "rlx-models?/mlx", "rlx-minicpm5?/mlx", "rlx-minimax?/mlx", "rlx-nemotron?/mlx", "rlx-gemma?/mlx"]
llm-rlx-cuda  = ["llm-rlx", "rlx?/cuda", "rlx-models?/cuda", "rlx-minicpm5?/cuda", "rlx-minimax?/cuda", "rlx-nemotron?/cuda", "rlx-gemma?/cuda"]
llm-rlx-rocm  = ["llm-rlx", "rlx?/rocm", "rlx-models?/rocm", "rlx-minicpm5?/rocm", "rlx-minimax?/rocm", "rlx-nemotron?/rocm", "rlx-gemma?/rocm"]
llm-rlx-wgpu  = ["llm-rlx", "rlx?/gpu", "rlx-models?/gpu", "rlx-minicpm5?/gpu", "rlx-minimax?/gpu", "rlx-nemotron?/gpu", "rlx-gemma?/gpu"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
glob = "0.3"
skill-constants = { path = "../skill-constants" }
skill-data      = { path = "../skill-data" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { workspace = true }
axum       = { version = "0.8", features = ["ws"] }
tokio      = { version = "1", features = ["full"] }
async-stream = "0.3"
log        = "0.4"
base64 = { workspace = true }
ureq       = { version = "3", features = ["native-tls", "json"] }
either     = "1"
hf-hub     = "0.5"
skill-tools  = { path = "../skill-tools", default-features = false }
skill-skills = { path = "../skill-skills" }
rlx        = { workspace = true, optional = true, features = ["cpu", "gguf"] }
rlx-models = { workspace = true, optional = true }
rlx-minicpm5 = { workspace = true, optional = true, features = ["tokenizer"] }
rlx-minimax  = { workspace = true, optional = true }
rlx-nemotron = { workspace = true, optional = true }
rlx-gemma    = { workspace = true, optional = true, features = ["tokenizer"] }
image      = { version = "0.25", default-features = false, features = ["png", "webp", "jpeg"], optional = true }

[build-dependencies]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
