[package]
name = "skill-neurorvq"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "NeuroRVQ biosignal tokenizer integration for NeuroSkill — EEG/ECG/EMG tokenization via neurorvq-rs (Burn 0.20)"

[features]
default    = ["ndarray"]
ndarray    = ["neurorvq-rs/ndarray", "dep:burn-ndarray"]
metal      = ["neurorvq-rs/metal", "dep:burn-wgpu", "burn-wgpu/metal"]
vulkan     = ["neurorvq-rs/vulkan", "dep:burn-wgpu", "burn-wgpu/vulkan"]

[dependencies]
neurorvq-rs  = { package = "neurorvq", version = "0.1.0" }
burn         = { version = "0.20.1", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.20.1", default-features = false, features = ["std"], optional = true }
burn-wgpu    = { version = "0.20.1", default-features = true, optional = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
hf-hub       = "0.5"
log          = "0.4"

[lints]
workspace = true
