[package]
name = "skill-router"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "WebSocket/HTTP command routing, UMAP projection, embedding loaders, EEG metric rounding — extracted workspace crate"
build = "build.rs"

[features]
default = ["gpu"]
gpu = [
    "rlx-umap/gpu",
    "rlx-umap/cuda",
    "dep:rlx-runtime",
    "rlx-runtime/cpu",
    "rlx-runtime/gpu",
    "rlx-runtime/cuda",
]
# macOS-only RLX backends (Metal + MLX). Implies `gpu`.
gpu-apple = [
    "gpu",
    "rlx-umap/metal",
    "rlx-umap/mlx",
    "rlx-runtime/metal",
    "rlx-runtime/mlx",
]
cpu = ["rlx-umap/cpu"]
# Local-only profiling (not for CI / release). Use with the `umap_hotpath`
# example: `cargo run -p skill-router --release --example umap_hotpath \
#   --features='gpu,hotpath'`
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-cpu = ["dep:hotpath", "hotpath/hotpath-cpu"]
hotpath-alloc = ["dep:hotpath", "hotpath/hotpath-alloc"]

[dependencies]
anyhow = { workspace = true }
skill-constants = { path = "../skill-constants" }
skill-commands  = { path = "../skill-commands" }
skill-data      = { path = "../skill-data" }
skill-settings  = { path = "../skill-settings" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
rusqlite = { workspace = true }
rlx-umap        = { version = "0.2.1", default-features = false, features = ["full"] }
rlx-runtime     = { version = "0.2.1", default-features = false, features = ["cpu"], optional = true }
hotpath         = { version = "0.16", optional = true }

[dev-dependencies]
rlx-runtime     = { version = "0.2.1", default-features = false, features = ["cpu"] }

[lints]
workspace = true
