[package]
name = "skill-skills"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Skill markdown discovery, parsing, and prompt injection for NeuroSkill LLM chat"

[dependencies]
skill-constants = { path = "../skill-constants" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "6"
ignore      = "0.4"
